[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Game_UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/pngfind.com-scroll-paper-png-5531999.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BC" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.756863 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.694118, 0.603922, 0.447059, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -173.0
margin_right = 164.0
margin_bottom = 174.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = -98.0
margin_right = 114.5
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 229.0
margin_bottom = 46.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.262745, 0.262745, 1 )
text = "Resume"
flat = true

[node name="FullScreen" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 229.0
margin_bottom = 96.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.262745, 0.262745, 1 )
text = "Full Screen"
flat = true

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 229.0
margin_bottom = 146.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.262745, 0.262745, 1 )
text = "Save"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 229.0
margin_bottom = 196.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.262745, 0.262745, 1 )
text = "Quit"
flat = true
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/FullScreen" to="." method="_on_Full_Screen_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
